cmake_minimum_required(VERSION 2.8)
PROJECT(ch_table)

FILE(GLOB_RECURSE HEADERS *.h)
FILE(GLOB_RECURSE SOURCES ./tests/*.cpp)
INCLUDE_DIRECTORIES("./")


if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")

	#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /clr ")
	string(REPLACE "/EHsc" "/EHs-c-" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
	#set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
	STRING (REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
	#set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
	#set(TARGET_PLATFORM "WIN32")

endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")

ADD_EXECUTABLE(ch_table ${TARGET_PLATFORM} ${HEADERS} ${SOURCES})

set_target_properties(ch_table PROPERTIES LINKER_FLAGS "/machine:x86" COMPILE_FLAGS "")